# autoasm

./: .coveragerc  .editorconfig  .gitignore  .travis.yml  Makefile  README.md  pytest.dev.ini  pytest.ini  requirements.txt  setup.cfg  setup.py
autoasm/: __init__.py  config.py  core.py  execptions.py
conveyor/: __init__.py
docs/: conf.py  index.rst
docs/usage/: quickstart.rst
tests/: base.py  config.json  config.py  dummy.py  test_async_injection.py  test_config.py  test_module_workspace_injection.py  test_workspace.py  test_workspace_injection.py
