[metadata]
name = autoasm
version = attr: autoasm.__VERSION__
url = https://github.com/neoblackcap/autoasm
author = Neo Ko
author_email = neo.blackcap@gmail.com
description = simple dependency inject
long_description = file: README.md
keywords = dependency injection
license = Apache 2.0 License
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[build_sphinx]
project = Autoasm

[aliases]
test = pytest